apt (0.9.7.8) UNRELEASED; urgency=low

  [ Manpages translation updates ]
  * Italian (Beatrice Torracca). Closes: #696601
  
  [ Michael Vogt ]
  * fix pkgProblemResolver::Scores, thanks to Paul Wise. 
    Closes: #697577

 -- Christian Perrier <bubulle@debian.org>  Mon, 24 Dec 2012 07:01:20 +0100

apt (0.9.7.7) unstable; urgency=low

  [ Program translation updates ]
  * Catalan (Jordi Mallach)
  * Drop a confusing non-breaking space. Closes: #691024
  * Thai (Theppitak Karoonboonyanan). Closes: #691613
  * Vietnamese (Trần Ngọc Quân). Closes: #693773
  * Fix Plural forms in German, French, Japanese and Portuguese
    translations. Thanks to Jakub Wilk for reporting these errors.

  [ David Kalnischkies ]
  * apt-pkg/packagemanager.cc:
    - do not do lock-step configuration for a M-A:same package if it isn't
      unpacked yet in SmartConfigure and do not unpack a M-A:same package
      again in SmartUnPack if we have already configured it (LP: #1062503)
  * apt-pkg/depcache.cc:
    - don't call MarkInstall with the FromUser flag set for packages
      which are dependencies of APT::Never-MarkAuto-Sections matchers
    - no mode changes should obviously be ok for pkgDepCache::IsModeChangeOk
  * cmdline/apt-get.cc:
    - do not call Mark{Install,Delete} from the autoremove code with
      the FromUser bit set to avoid modifying the auto-installed bit
  * apt-pkg/algorithms.cc:
    - ensure pkgProblemResolver calls MarkDelete without FromUser set
      so that it can't overrule holds and the protection flag
  
  [ Michael Vogt ]
  * change permissions of /var/log/apt/term.log to 0640 (LP: #975199)

  [ Jonathan Thomas ]
  * apt-pkg/algorithms.cc:
    - fix package-pointer array memory leak in ResolveByKeepInternal()

 -- Michael Vogt <mvo@debian.org>  Thu, 13 Dec 2012 09:52:19 +0100

apt (0.9.7.6) unstable; urgency=low

  [ Program translation updates ]
  * Ukrainian (A. Bondarenko)

  [ David Kalnischkies ]
  * apt-pkg/pkgcachegen.cc: