@@ -27,7 +27,7 @@ class Configuration;
 // Non-ABI-Breaks should only increase RELEASE number.
 // See also buildlib/libversion.mak
 #define APT_PKG_MAJOR 4
-#define APT_PKG_MINOR 12
+#define APT_PKG_MINOR 13
 #define APT_PKG_RELEASE 0
     
 extern const char *pkgVersion;
